kafka/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-f
  labels:
    app: kafka-g
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-a
  template:
    metadata:
      labels:
        app: kafka-a
    spec:
      containers:
      - name: kafka1
        image: bitnami/kafka:latest
        ports:
        - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-b
spec:
  ports:
  - port: 9092
    targetPort: 9092
  selector:
    app: kafka-a
