kafka/vs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traffic-split-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50" # 50% 流量
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-yahoo
            port:
              number: 81
